--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLASH - Fluxo de Caixa</title>
-    <link rel="manifest" href="../manifest.json">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="style.css">
     <style>
     @media (max-width: 600px) {
         html, body {
@@ -100,8 +100,8 @@
 </head>
 <body>
     <div class="page-switcher">
-        <a href="../salario/salario.html">SALÁRIO</a>
-        <a href="../flash/flash.html" class="active">FLASH</a>
+        <a href="salario/salario.html">SALÁRIO</a>
+        <a href="flash/flash.html" class="active">FLASH</a>
     </div>
     <header style="display:flex;flex-direction:column;align-items:center;gap:8px;margin-bottom:10px;animation:fadeInDown 1s;">
             <section style="max-width:420px;margin:0 auto 18px auto;background:#232946;padding:18px 18px 10px 18px;border-radius:12px;box-shadow:0 2px 8px #0003;animation:fadeInDown 1.1s;">
@@ -139,7 +139,7 @@
         <ul id="lista-variavel-flash"></ul>
     </section>
     <nav style="animation:fadeInUp 1.5s;">
-        <a href="../salario/salario.html">Ir para Salário</a>
+        <a href="salario/salario.html">Ir para Salário</a>
     </nav>
     <footer style="margin:32px auto 18px auto;max-width:420px;text-align:center;background:#232946;padding:18px 0 10px 0;border-radius:12px;box-shadow:0 2px 8px #0003;">
                 <div style="margin-top:16px;font-size:1.1rem;">
@@ -194,11 +194,11 @@
     // Atualiza receita ao carregar
     atualizarTotaisFlash();
     </script>
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
             <script>
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', function() {
-                    navigator.serviceWorker.register('../service-worker.js');
+                    navigator.serviceWorker.register('service-worker.js');
                 });
             }
             </script>
