--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
     <div class="page-switcher">
         <a href="salario/salario.html">SALÁRIO</a>
-        <a href="flash/flash.html" class="active">FLASH</a>
+        <a href="index.html" class="active">FLASH</a>
     </div>
     <header style="display:flex;flex-direction:column;align-items:center;gap:8px;margin-bottom:10px;animation:fadeInDown 1s;">
             <section style="max-width:420px;margin:0 auto 18px auto;background:#232946;padding:18px 18px 10px 18px;border-radius:12px;box-shadow:0 2px 8px #0003;animation:fadeInDown 1.1s;">
