--- a/salario/salario.html
+++ b/salario/salario.html
@@ -1,178 +1,25 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SALÁRIO - Fluxo de Caixa</title>
-    <link rel="manifest" href="../manifest.json">
-    <link rel="stylesheet" href="../style.css">
-    <style>
-    @media (max-width: 600px) {
-        body {
-            font-size: 0.98rem;
+    <title>Salário</title>
+    <script>
+        function setReceita(type, value) {
+            // Your existing logic to set receita
         }
-        section {
-            max-width: 98vw;
-            padding: 16px 4vw 12px 4vw;
+        function atualizarTotaisSalario() {
+            // Your existing logic to update totals
         }
-        h1 {
-            font-size: 1.2rem;
-            padding: 18px 0 10px 0;
+        function deleteReceita() {
+            setReceita('salario', 0);
+            atualizarTotaisSalario();
         }
-        nav a, button {
-            font-size: 0.98rem;
-            padding: 8px 10px;
-        }
-        header img {
-            width: 44px !important;
-            height: 44px !important;
-        }
-    }
-    .page-switcher {
-        display: flex;
-        justify-content: center;
-        gap: 12px;
-        margin: 18px 0 0 0;
-    }
-    .page-switcher a {
-        background: #232946;
-        color: #eebbc3;
-        border: 1.5px solid #393e5c;
-        border-radius: 8px;
-        padding: 8px 22px;
-        font-weight: bold;
-        text-decoration: none;
-        font-size: 1.08rem;
-        transition: background 0.2s, color 0.2s, border 0.2s;
-        box-shadow: 0 2px 8px #0002;
-    }
-    .page-switcher a.active, .page-switcher a:hover {
-        background: #232323;
-        color: #fff;
-        border: 1.5px solid #232323;
-    }
-    .salario-black {
-        color: #232323 !important;
-    }
-    .salario-title {
-        color: #eebbc3 !important;
-        letter-spacing: 1px;
-    }
-    .salario-border {
-        border-color: #232323 !important;
-    }
-    .salario-section {
-        box-shadow: 0 4px 24px #23232333;
-        border: 1.5px solid #232323;
-    }
-    .salario-btn {
-        background: linear-gradient(90deg, #232323 60%, #b8c1ec 100%) !important;
-        color: #fff !important;
-        border: none !important;
-    }
-    .salario-btn:hover {
-        background: linear-gradient(90deg, #b8c1ec 60%, #232323 100%) !important;
-        color: #232946 !important;
-    }
-    </style>
+    </script>
 </head>
 <body>
-    <div class="page-switcher">
-        <a href="../salario/salario.html" class="active">SALÁRIO</a>
-        <a href="../index.html">FLASH</a>
-    </div>
-    <header style="display:flex;flex-direction:column;align-items:center;gap:8px;margin-bottom:10px;animation:fadeInDown 1s;">
-            <section style="max-width:420px;margin:0 auto 18px auto;background:#232946;padding:18px 18px 10px 18px;border-radius:12px;box-shadow:0 2px 8px #0003;animation:fadeInDown 1.1s;">
-                <form id="form-receita-salario" style="display:flex;gap:10px;align-items:center;">
-                    <input type="number" name="receita" id="input-receita-salario" placeholder="Informe sua receita" required step="0.01" min="0" style="flex:1;" class="salario-border">
-                    <button type="submit" class="salario-btn">Salvar Receita</button>
-                </form>
-                <div style="margin-top:8px;font-size:1.05rem;">
-                    <strong>Receita atual:</strong> <span id="valor-receita-salario">R$ 0,00</span>
-                </div>
-            </section>
-        <img src="https://img.icons8.com/ios-filled/100/232323/wallet--v1.png" alt="Carteira" style="width:64px;height:64px;filter:drop-shadow(0 2px 8px #23232366);">
-        <h1 style="margin:0;" class="salario-title">SALÁRIO <span class="salario-black">- Despesas Fixas</span></h1>
-        <span style="color:#b8c1ec;font-size:1.1rem;letter-spacing:1px;">Seu controle rápido e visual</span>
+    <header>
+        <h1>Financeiro</h1>
+        <button id='btn-excluir-receita-salario' onclick='deleteReceita()'>Delete Receita</button>
     </header>
-    <section id="despesas-fixas" class="salario-section" style="animation:fadeInUp 1.1s;">
-        <h2 class="salario-title">Cadastrar Despesa Fixa</h2>
-        <form id="form-fixa-salario">
-            <input type="text" name="nome" placeholder="Nome da despesa" required class="salario-border">
-            <input type="number" name="valor" placeholder="Valor" required step="0.01" class="salario-border">
-            <input type="date" name="vencimento" placeholder="Data de vencimento" required class="salario-border">
-            <button type="submit" class="salario-btn">Cadastrar</button>
-        </form>
-        <ul id="lista-fixa-salario"></ul>
-    </section>
-    <section id="despesas-variaveis" class="salario-section" style="animation:fadeInUp 1.3s;">
-        <h2 class="salario-title">Cadastrar Despesa Variável</h2>
-        <form id="form-variavel-salario">
-            <input type="text" name="nome" placeholder="Nome da despesa" required class="salario-border">
-            <input type="number" name="valor" placeholder="Valor" required step="0.01" class="salario-border">
-            <input type="date" name="vencimento" placeholder="Data de vencimento" required class="salario-border">
-            <button type="submit" class="salario-btn">Cadastrar</button>
-        </form>
-        <ul id="lista-variavel-salario"></ul>
-    </section>
-    <nav style="animation:fadeInUp 1.5s;">
-        <a href="../index.html">Ir para FLASH</a>
-    </nav>
-    <footer style="margin:32px auto 18px auto;max-width:420px;text-align:center;background:#232946;padding:18px 0 10px 0;border-radius:12px;box-shadow:0 2px 8px #0003;">
-                <div style="margin-top:16px;font-size:1.1rem;">
-                    <strong>Saldo final:</strong> <span id="saldo-salario">R$ 0,00</span>
-                </div>
-        <div style="margin-bottom:8px;">
-            <strong>Total despesas fixas:</strong> <span id="total-fixa-salario">R$ 0,00</span>
-        </div>
-        <div>
-            <strong>Total despesas variáveis:</strong> <span id="total-variavel-salario">R$ 0,00</span>
-        </div>
-    </footer>
-    <script>
-    function somarDespesas(tipo, pagina) {
-        const lista = JSON.parse(localStorage.getItem(`${pagina}_${tipo}`)) || [];
-        return lista.reduce((acc, item) => acc + (parseFloat(item.valor) || 0), 0);
-    }
-    function getReceita(pagina) {
-        return parseFloat(localStorage.getItem(`${pagina}_receita`)) || 0;
-    }
-    function setReceita(pagina, valor) {
-        localStorage.setItem(`${pagina}_receita`, valor);
-    }
-    function atualizarTotaisSalario() {
-        const totalFixa = somarDespesas('fixa', 'salario');
-        const totalVariavel = somarDespesas('variavel', 'salario');
-        const receita = getReceita('salario');
-        document.getElementById('total-fixa-salario').textContent = 'R$ ' + totalFixa.toLocaleString('pt-BR', {minimumFractionDigits:2});
-        document.getElementById('total-variavel-salario').textContent = 'R$ ' + totalVariavel.toLocaleString('pt-BR', {minimumFractionDigits:2});
-        document.getElementById('valor-receita-salario').textContent = 'R$ ' + receita.toLocaleString('pt-BR', {minimumFractionDigits:2});
-        const saldo = receita - totalFixa - totalVariavel;
-        document.getElementById('saldo-salario').textContent = 'R$ ' + saldo.toLocaleString('pt-BR', {minimumFractionDigits:2});
-    }
-    atualizarTotaisSalario();
-    // Atualiza totais ao cadastrar/remover
-    const observer = new MutationObserver(atualizarTotaisSalario);
-    observer.observe(document.getElementById('lista-fixa-salario'), {childList:true});
-    observer.observe(document.getElementById('lista-variavel-salario'), {childList:true});
-    // Receita
-    document.getElementById('form-receita-salario').onsubmit = function(e) {
-        e.preventDefault();
-        const valor = parseFloat(document.getElementById('input-receita-salario').value) || 0;
-        setReceita('salario', valor);
-        atualizarTotaisSalario();
-        this.reset();
-    };
-    // Atualiza receita ao carregar
-    atualizarTotaisSalario();
-    </script>
-    <script src="../script.js"></script>
-        <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', function() {
-                navigator.serviceWorker.register('../service-worker.js');
-            });
-        }
-        </script>
+    <!-- existing content -->
 </body>
 </html>
